# MusicProject_OOP2223

./: Artist.cpp  Artist.h  CMakeLists.txt  CanBeSaved.h  Lyrics.cpp  Lyrics.h  Melody.cpp  Melody.h  MusicException.cpp  MusicException.h  Musician.cpp  Musician.h  MyAggregationVector.h  NewMusicException.cpp  NewMusicException.h  PlayList.cpp  PlayList.h  Player.cpp  Player.h  Singer.cpp  Singer.h  Song.cpp  Song.h  classDiagram_PlantUML.puml  classDiagram_UMLet.uxf  main.cpp
